Added AdminRoute.js and Dashboard.js and modified App.js such that the analytical dashboard is accessible only for admin users

--- a/food-seer-frontend/src/index.css
+++ b/food-seer-frontend/src/index.css
@@ -2512,3 +2512,23 @@ code {
 .food-item-info .rating-display {
   margin-top: 4px;
 }
+
+.dashboard-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+.chart-container {
+  width: 100%;
+  height: 450px;
+}
+
+.full-width {
+  grid-column: span 2;
+}
+
+
+
+
+
